<resources>
    <string name="app_name">GarbyClean</string>

    <!-- Home Fragment-->
    <string name="home">GarbyClean</string>
    <string name="report_incident">☉ Repor incident</string>

    <!-- Notes Fragment -->
    <string name="notes">Notes</string>
    <string name="delete_note">Remove</string>
    <string name="note_deleted">Note deleted successfully</string>
    <string name="note_restore">Restore</string>
    <string name="note_restored">Note successfully restored</string>
    <string name="create_note">&#43; Create note</string>
    <string name="navigation_search">Search</string>

    <!--Navigation "in_backdrop.xml"-->
    <string name="navigation_map">Map</string>
    <string name="navigation_notes">Notes</string>
    <string name="navigation_login">Login</string>
    <string name="navigation_logout">Logout</string>

    <!-- Create Notes Fragment -->
    <string name="note_create">New note</string>
    <string name="navigation_color">Color</string>
    <string name="pick_a_color">Choose a color</string>
    <string name="save_note">✓ Save</string>
    <string name="note_body">Nota</string>
    <string name="note_title">Titulo</string>
    <string name="no_string_title">Campo titulo é obrigatório</string>
    <string name="note_view">Ver nota</string>
    <string name="note_edit">Editar nota</string>
    <string name="navigation_note_edit">Editar nota</string>
    <string name="navigation_filter">Filtrar</string>
    <string name="navigation_set_alarm">Adicionar alarme</string>
    <string name="navigation_unset_alarm">Desativar alarme</string>
    <string name="notification_open">Ver</string>
    <string name="notification_close">Dispensar</string>
    <string name="notification_open_close">Ver e dispensar</string>

    <!--Login Fragment-->
    <string name="invalid_username">Insert a valid username</string>
    <string name="invalid_password">Insert a valid password</string>
    <string name="login_success">Welcome</string>
    <string name="wrong_user_info">Incorrect username or password</string>
    <string name="login_fail">Oops, there was a error trying your login.</string>
    <string name="field_required">Field required.</string>

    <!--URL's-->
    <string translatable="false" name="base_url">http://localhost:8888/</string>

    <!--Markers status-->
    <string name="status_completed">Completed</string>
    <string name="status_in_progress">On going</string>
    <string name="status_received">Received</string>
    <string name="status_error">Error</string>

    <string name="date">%s %s at %s</string>
    <string name="info_window_status">Status:</string>
    <string name="info_window_date">Date/hour:</string>
    <string name="event_created">Incident reported.</string>
    <string name="user_report">Reported by me</string>
    <string name="event_comment">Comments or extra information</string>
    <string name="event_location">Location</string>
    <string name="event_add_image">Add image</string>
    <string name="event_edit_image">Change image</string>
    <string name="event_no_image">No image</string>
    <string name="event_image">Image</string>
    <string name="create_event">Register incident</string>
    <string name="no_login">Login is required to continue</string>
    <string name="consent_title">Consentiment</string>
    <string name="consent_body">Visitors may post content as long as it is not obscene, illegal, defamatory, threatening, infringing of intellectual property rights, invasive of privacy or injurious in any other way to third parties. Content has to be free of software viruses, political campaign, and commercial solicitation.We reserve all rights (but not the obligation) to remove and/or edit such content. When you post your content, you grant [name] non-exclusive, royalty-free and irrevocable right to use, reproduce, publish, modify such content throughout the world in any media.
    \n\n
    If you are an owner of an account on this APP, you are solely responsible for maintaining the confidentiality of your private user details (username and password). You are responsible for all activities that occur under your account or password.

    We reserve all rights to terminate accounts, edit or remove content and cancel incidents in their sole discretion.
    </string>
    <string name="consent_checkbox_1">I have read and accept the terms of use.</string>
    <string name="consent_checkbox_2">I accept that my images are used for incident resolution purposes.</string>
    <string name="consent_needed">Your consent is required to continue.</string>

    <!--Event detail fragment-->
    <string name="single_status">Status:</string>
    <string name="single_date_time">Date/hour:</string>
    <string name="single_description">Description</string>
    <string name="event_title">Incident</string>
    <string name="navigation_event_edit">Edit event</string>
    <string name="navigation_event_view">Show event</string>
    <string name="navigation_event_cancel">Cancel</string>
    <string name="event_type">Incident type</string>
    <string name="toast_success">Success</string>
    <string name="toast_info">Information</string>
    <string name="toast_error">Error</string>
    <string name="toast_warning">Warning</string>
    <string name="marker_not_in_area">Marker outside allowed area</string>
    <string name="general_error">Oops, it looks like an error occurred. Check your internet connection and try again</string>
    <string name="event_updated">Incident updated.</string>
    <string name="event_deleted">Incidente canceled.</string>
    <string name="filter_radius">Distance (m) (default:0)</string>
    <string name="filter_other">Other</string>
    <string name="filter_checkbox_4">Garbage disposal</string>
    <string name="filter_checkbox_3">Spillage on road </string>
    <string name="filter_checkbox_2">Garbage on road</string>
    <string name="filter_checkbox_1">Damage on road</string>
    <string name="filter_title">Filter map</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_remember">Remember me</string>
    <string name="login_btn">Login</string>
    <string name="login_divider">Or</string>
    <string name="login_create">Create account</string>
    <string name="login_recover">Recover password</string>
    <string name="event_create">Register event</string>

    <!--Logout-->
    <string name="logout">Logout</string>
    <string name="leave">Do you wish to leave your session?</string>
    <string name="yes">Leave</string>
    <string name="no">Cancel</string>

    <!--Remove event-->
    <string name="remove_event">Cancel</string>
    <string name="remove_event_body">Do you wish to cancel the current incident?</string>
    <string name="yes_remove">Confirm</string>
    <string name="no_remove">Cancel</string>
    <string name="consent_btn">Continue</string>
    <string name="to_fast">You are moving to fast, slow down</string>

    <!--Strings dialog gps-->
    <string name="gps_dialog_title">GPS turned off</string>
    <string name="gps_dialog_body">GPS is turned off. Do you wish to go to the definitions menu?</string>
    <string name="gps_dialog_setting">Definitions</string>
    <string name="gps_dialog_cancel">Cancel</string>

    <string-array name="type_array">
        <item>Damage on road</item>
        <item>Garbage on road</item>
        <item>Spillage on road</item>
        <item>Garbage disposal</item>
        <item>Other</item>
    </string-array>
</resources>