<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/event_edit"
        android:visible="true"
        android:icon="@drawable/in_edit"
        app:showAsAction="always|collapseActionView"
        android:title="@string/navigation_event_edit" />

    <item
        android:id="@+id/event_edit_cancel"
        android:visible="false"
        android:icon="@drawable/in_view"
        app:showAsAction="always|collapseActionView"
        android:title="@string/navigation_event_view" />

    <item
        android:id="@+id/event_cancel"
        android:icon="@drawable/in_cancel"
        android:visible="true"
        app:showAsAction="always|collapseActionView"
        android:title="@string/navigation_event_cancel" />
</menu>