<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cpb_white"
    android:fillViewport="true"
    tools:context="fragments.NoteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:elevation="100dp"
        android:padding="0dp"
        android:paddingTop="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="100dp">

            <androidx.appcompat.widget.Toolbar
                app:elevation="100dp"
                android:id="@+id/close_note"
                style="@style/Widget.Shrine.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/white"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                app:contentInsetStart="-10dp"
                app:navigationIcon="@drawable/in_close" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:fillViewport="true"
            android:layout_below="@+id/app_bar"
            android:elevation="-10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="25dp"
            android:paddingTop="0dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/note_title"
                android:textColorHint="@color/cpb_black"
                android:paddingStart="90dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:ellipsize="end"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note_title"
                    android:layout_marginBottom="0dp"
                    android:paddingBottom="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:textColorHint="@color/cpb_black"
                    android:fontFamily="@font/handwritten"
                    android:textSize="17sp"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:maxLines="4"
                    android:maxLength="150"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="15dp"
                android:id="@+id/note_body_layout"
                android:layout_below="@+id/note_title_layout"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#9F8D8D"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:justificationMode="inter_word"
                    android:textStyle="bold"
                    android:fontFamily="@font/handwritten"
                    android:id="@+id/note_body"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/note_body"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:padding="25dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_note"
            style="@style/ButtonCornerLeftTop"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="end|bottom"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="25dp"
            app:iconSize="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/save_note"
            android:textColor="@color/cpb_white"
            app:iconTint="@color/white"
            app:strokeColor="@color/colorPrimary" />

    </RelativeLayout>
</FrameLayout>
